<resources>
    <string name="app_name">Messed Up</string>
    <string name="TAG_SUCCESS">success</string>
    <string name="TAG_MESSINFO">messinfo</string>
    <string name="TAG_MESSID">messid</string>
    <string name="TAG_NAME">name</string>
    <string name="TAG_RICE">rice</string>
    <string name="TAG_ROTI">roti</string>
    <string name="TAG_SPECIAL">special</string>
    <string name="TAG_SPECIAL_EXTRA">specialextra</string>
    <string name="TAG_VEGIE1">vegieone</string>
    <string name="TAG_VEGIE2">vegietwo</string>
    <string name="TAG_VEGIE3">vegiethree</string>
    <string name="TAG_OTHER">other</string>
    <string name="TAG_GCHARGE">gcharge</string>
    <string name="TAG_STATUS">status</string>
    <string name="TAG_OPENTIME">opentime</string>
    <string name="TAG_CLOSETIME">closetime</string>
    <string name="url_mess_menu">http://www.messedup.co.in/messedupapi/api/t.php</string>

    <string name="about_us_string"><u>About Us</u></string>
    <string name="contact_us_string"><u>Need Help? Contact Us</u></string>

    <string name="pict">PICT, BVP, Katraj</string>
    <string name="bvp">BVP, Katraj</string>
    <string name="sinhagad">SINHAGAD COE, Vadgoan</string>
    <string name="skn">SKNCOE, Ambegaon</string>
    <string name="vit">VIT, Bibvewadi</string>
    <string name="cummins">CUMMINS COEW, Karve Nagar</string>

    <string name="contactusat">Need Help? Call us or Drop a Message anytime     <br><a href="" target="_top">+917387636474</a></br></string>


    <string name="interstitial_full_screen">ca-app-pub-2262853430578478/1739195261</string>


    <string name="my_own_title">Rate Us!</string>
    <string name="my_own_message">If you love our App, please take a moment to rate it on Google Play!</string>
    <string name="my_own_rate">Rate</string>
    <string name="my_own_thanks">No, Thanks</string>
    <string name="my_own_cancel">Maybe Later</string>


    <string name="gujratimessdetailsadd">Survey no.34/4, Prasad Bungalow, Katraj\nLandmark: Near Pune Cambridge School.</string>

    <string name="tncstring"><a href="http://messedup.in/terms_conditions/">Terms and Conditions</a></string>
    <string name="ppstring">and <a href="http://messedup.in/PrivacyPolicy/">Privacy Policy</a></string>

</resources>
